--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^18.2.11",
     "axios": "^0.23.0",
-    "firebase": "^8.2.4",
+    "firebase": "^9.22.2",
+    "history": "^4.10.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.33",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -23,11 +25,12 @@
     "react-hook-form": "^7.17.4",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.5",
-    "redux": "^4.1.2",
+    "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "router": "^1.3.5",
     "web-vitals": "^1.0.1"
   },
