--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.11",
     "axios": "^0.23.0",
     "firebase": "^9.22.2",
+    "formik": "^2.4.2",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -32,7 +33,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "router": "^1.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
