--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^18.2.11",
     "axios": "^0.23.0",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-encode": "^2.1.10",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.0",
     "firebase": "^9.22.2",
     "formik": "^2.4.2",
     "history": "^5.3.0",
@@ -21,6 +26,7 @@
     "primereact": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-filepond": "^7.1.2",
     "react-firebase-hooks": "^3.0.0",
     "react-firebaseui": "^5.0.2",
     "react-hook-form": "^7.17.4",
@@ -28,11 +34,13 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "router": "^1.3.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1",
     "yup": "^1.2.0"
   },
